src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_library.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: check library
---
[Check] check::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({check::library})
    - Set({check::library/alloc})
    - Set({check::library/alloctests})
    - Set({check::library/compiler-builtins/compiler-builtins})
    - Set({check::library/core})
    - Set({check::library/coretests})
    - Set({check::library/panic_abort})
    - Set({check::library/panic_unwind})
    - Set({check::library/proc_macro})
    - Set({check::library/rustc-std-workspace-core})
    - Set({check::library/std})
    - Set({check::library/std_detect})
    - Set({check::library/sysroot})
    - Set({check::library/test})
    - Set({check::library/unwind})
