src/bootstrap/src/core/builder/cli_paths/snapshots/x_check_trustdoc.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: check trustdoc
---
[Check] check::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/trustdoc})
