src/bootstrap/src/core/builder/cli_paths/snapshots/x_clean.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: clean
---
[Clean] clean::CleanAll
    targets: [aarch64-unknown-linux-gnu]
    - Set({})
