src/bootstrap/src/core/builder/cli_paths/snapshots/x_clippy.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: clippy
---
[Clippy] clippy::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({clippy::library})
    - Set({clippy::library/alloc})
    - Set({clippy::library/compiler-builtins/compiler-builtins})
    - Set({clippy::library/core})
    - Set({clippy::library/panic_abort})
    - Set({clippy::library/panic_unwind})
    - Set({clippy::library/proc_macro})
    - Set({clippy::library/rustc-std-workspace-core})
    - Set({clippy::library/std})
    - Set({clippy::library/std_detect})
    - Set({clippy::library/sysroot})
    - Set({clippy::library/test})
    - Set({clippy::library/unwind})
[Clippy] clippy::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({clippy::compiler})
    - Set({clippy::compiler/rustc})
    - Set({clippy::compiler/rustc_abi})
    - Set({clippy::compiler/rustc_arena})
    - Set({clippy::compiler/rustc_ast})
    - Set({clippy::compiler/rustc_ast_ir})
    - Set({clippy::compiler/rustc_ast_lowering})
    - Set({clippy::compiler/rustc_ast_passes})
    - Set({clippy::compiler/rustc_ast_pretty})
    - Set({clippy::compiler/rustc_attr_parsing})
    - Set({clippy::compiler/rustc_baked_icu_data})
    - Set({clippy::compiler/rustc_borrowck})
    - Set({clippy::compiler/rustc_builtin_macros})
    - Set({clippy::compiler/rustc_codegen_llvm})
    - Set({clippy::compiler/rustc_codegen_ssa})
    - Set({clippy::compiler/rustc_codegen_trust_cg})
    - Set({clippy::compiler/rustc_const_eval})
    - Set({clippy::compiler/rustc_data_structures})
    - Set({clippy::compiler/rustc_driver})
    - Set({clippy::compiler/rustc_driver_impl})
    - Set({clippy::compiler/rustc_error_codes})
    - Set({clippy::compiler/rustc_error_messages})
    - Set({clippy::compiler/rustc_errors})
    - Set({clippy::compiler/rustc_expand})
    - Set({clippy::compiler/rustc_feature})
    - Set({clippy::compiler/rustc_fs_util})
    - Set({clippy::compiler/rustc_graphviz})
    - Set({clippy::compiler/rustc_hashes})
    - Set({clippy::compiler/rustc_hir})
    - Set({clippy::compiler/rustc_hir_analysis})
    - Set({clippy::compiler/rustc_hir_id})
    - Set({clippy::compiler/rustc_hir_pretty})
    - Set({clippy::compiler/rustc_hir_typeck})
    - Set({clippy::compiler/rustc_incremental})
    - Set({clippy::compiler/rustc_index})
    - Set({clippy::compiler/rustc_index_macros})
    - Set({clippy::compiler/rustc_infer})
    - Set({clippy::compiler/rustc_interface})
    - Set({clippy::compiler/rustc_lexer})
    - Set({clippy::compiler/rustc_lint})
    - Set({clippy::compiler/rustc_lint_defs})
    - Set({clippy::compiler/rustc_llvm})
    - Set({clippy::compiler/rustc_log})
    - Set({clippy::compiler/rustc_macros})
    - Set({clippy::compiler/rustc_metadata})
    - Set({clippy::compiler/rustc_middle})
    - Set({clippy::compiler/rustc_mir_build})
    - Set({clippy::compiler/rustc_mir_dataflow})
    - Set({clippy::compiler/rustc_mir_transform})
    - Set({clippy::compiler/rustc_monomorphize})
    - Set({clippy::compiler/rustc_next_trait_solver})
    - Set({clippy::compiler/rustc_parse})
    - Set({clippy::compiler/rustc_parse_format})
    - Set({clippy::compiler/rustc_passes})
    - Set({clippy::compiler/rustc_pattern_analysis})
    - Set({clippy::compiler/rustc_privacy})
    - Set({clippy::compiler/rustc_proc_macro})
    - Set({clippy::compiler/rustc_public})
    - Set({clippy::compiler/rustc_public_bridge})
    - Set({clippy::compiler/rustc_query_impl})
    - Set({clippy::compiler/rustc_resolve})
    - Set({clippy::compiler/rustc_sanitizers})
    - Set({clippy::compiler/rustc_serialize})
    - Set({clippy::compiler/rustc_session})
    - Set({clippy::compiler/rustc_span})
    - Set({clippy::compiler/rustc_symbol_mangling})
    - Set({clippy::compiler/rustc_target})
    - Set({clippy::compiler/rustc_thread_pool})
    - Set({clippy::compiler/rustc_trait_selection})
    - Set({clippy::compiler/rustc_traits})
    - Set({clippy::compiler/rustc_transmute})
    - Set({clippy::compiler/rustc_ty_utils})
    - Set({clippy::compiler/rustc_type_ir})
    - Set({clippy::compiler/rustc_type_ir_macros})
    - Set({clippy::compiler/rustc_windows_rc})
    - Set({clippy::crates/trust-binary-parse})
    - Set({clippy::crates/trust-bmc})
    - Set({clippy::crates/trust-cache})
    - Set({clippy::crates/trust-cert-meter})
    - Set({clippy::crates/trust-certify})
    - Set({clippy::crates/trust-cg-bridge})
    - Set({clippy::crates/trust-convergence})
    - Set({clippy::crates/trust-disasm})
    - Set({clippy::crates/trust-ir-bridge})
    - Set({clippy::crates/trust-lift})
    - Set({clippy::crates/trust-loop})
    - Set({clippy::crates/trust-machine-sem})
    - Set({clippy::crates/trust-mir-extract})
    - Set({clippy::crates/trust-os})
    - Set({clippy::crates/trust-proof-cert})
    - Set({clippy::crates/trust-report})
    - Set({clippy::crates/trust-router})
    - Set({clippy::crates/trust-spec})
    - Set({clippy::crates/trust-spec-elab})
    - Set({clippy::crates/trust-strengthen})
    - Set({clippy::crates/trust-symex})
    - Set({clippy::crates/trust-temporal})
    - Set({clippy::crates/trust-thir-lower})
    - Set({clippy::crates/trust-types})
    - Set({clippy::crates/trust-vc-bridge})
    - Set({clippy::crates/trust-vcgen})
    - Set({clippy::crates/trust-verifier-api})
    - Set({clippy::crates/trust-witness})
    - Set({clippy::crates/trust-wp})
