src/bootstrap/src/core/builder/cli_paths/snapshots/x_dist_trust_std.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: dist trust-std
---
[Dist] dist::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({dist::trust-std})
